lib/regexp.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Pattern: peg$parsePattern },
      peg$startRuleFunction  = peg$parsePattern,

      peg$c0 = "|",
      peg$c1 = peg$literalExpectation("|", false),
      peg$c2 = function(head, part) { return part; },
      peg$c3 = function(head, rest) {
              head = simplifyConcat(head);
              rest = rest.map(simplifyConcat);
              if (rest.length == 0 && head.length === 1) {
                  return head[0];
              }
              rest.unshift(head);
              return new Or(rest);
          },
      peg$c4 = function(atom, quantifier) { if (quantifier) { quantifier.setSubject(atom); return quantifier; } return atom; },
      peg$c5 = "^",
      peg$c6 = peg$literalExpectation("^", false),
      peg$c7 = function() { return new StartAnchor(); },
      peg$c8 = "$",
      peg$c9 = peg$literalExpectation("$", false),
      peg$c10 = function() { return new EndAnchor(); },
      peg$c11 = "\\b",
      peg$c12 = peg$literalExpectation("\\b", false),
      peg$c13 = function() { return new WordBoundary(); },
      peg$c14 = "\\B",
      peg$c15 = peg$literalExpectation("\\B", false),
      peg$c16 = function() { return new NegatedWordBoundary(); },
      peg$c17 = "(?=",
      peg$c18 = peg$literalExpectation("(?=", false),
      peg$c19 = ")",
      peg$c20 = peg$literalExpectation(")", false),
      peg$c21 = function(expr) { return new Lookahead(expr); },
      peg$c22 = "(?!",
      peg$c23 = peg$literalExpectation("(?!", false),
      peg$c24 = function(expr) { return new NegatedLookahead(expr); },
      peg$c25 = "?",
      peg$c26 = peg$literalExpectation("?", false),
      peg$c27 = function(prefix, isLazy) { if (isLazy) { prefix.setLazy(true); } return prefix; },
      peg$c28 = "*",
      peg$c29 = peg$literalExpectation("*", false),
      peg$c30 = function() { return new Star(); },
      peg$c31 = "+",
      peg$c32 = peg$literalExpectation("+", false),
      peg$c33 = function() { return new Plus(); },
      peg$c34 = function() { return new Opt(); },
      peg$c35 = "{",
      peg$c36 = peg$literalExpectation("{", false),
      peg$c37 = "}",
      peg$c38 = peg$literalExpectation("}", false),
      peg$c39 = function(min) { return new Repeat(min, min); },
      peg$c40 = ",",
      peg$c41 = peg$literalExpectation(",", false),
      peg$c42 = function(min, max) { return new Repeat(min, max); },
      peg$c43 = function(digits) { return parseInt(digits.join(""), 10); },
      peg$c44 = /^[0-9]/,
      peg$c45 = peg$classExpectation([["0", "9"]], false, false),
      peg$c46 = function(c) { return new Literal(c); },
      peg$c47 = ".",
      peg$c48 = peg$literalExpectation(".", false),
      peg$c49 = function() { return new Dot(); },
      peg$c50 = "\\",
      peg$c51 = peg$literalExpectation("\\", false),
      peg$c52 = function(esc) { return esc; },
      peg$c53 = "(",
      peg$c54 = peg$literalExpectation("(", false),
      peg$c55 = function(expr) { return expr; },
      peg$c56 = "(?:",
      peg$c57 = peg$literalExpectation("(?:", false),
      peg$c58 = function(expr) { return NonCapture(expr); },
      peg$c59 = /^[^$\\.*+?\^()[\]{}|]/,
      peg$c60 = peg$classExpectation(["$", "\\", ".", "*", "+", "?", "^", "(", ")", "[", "]", "{", "}", "|"], true, false),
      peg$c61 = function(n) { return n === 0 ? new Literal("\0") : new Backref(n); },
      peg$c62 = "0",
      peg$c63 = peg$literalExpectation("0", false),
      peg$c64 = function() { return 0; },
      peg$c65 = function(n) { return parseInt(n, 10); },
      peg$c66 = /^[1-9]/,
      peg$c67 = peg$classExpectation([["1", "9"]], false, false),
      peg$c68 = "c",
      peg$c69 = peg$literalExpectation("c", false),
      peg$c70 = /^[a-z]/i,
      peg$c71 = peg$classExpectation([["a", "z"]], false, true),
      peg$c72 = function(code) { return String.fromCharCode(code.charCodeAt(0) % 32); },
      peg$c73 = "f",
      peg$c74 = peg$literalExpectation("f", false),
      peg$c75 = function() { return "\f"; },
      peg$c76 = "n",
      peg$c77 = peg$literalExpectation("n", false),
      peg$c78 = function() { return "\n"; },
      peg$c79 = "r",
      peg$c80 = peg$literalExpectation("r", false),
      peg$c81 = function() { return "\r"; },
      peg$c82 = "t",
      peg$c83 = peg$literalExpectation("t", false),
      peg$c84 = function() { return "\t"; },
      peg$c85 = "v",
      peg$c86 = peg$literalExpectation("v", false),
      peg$c87 = function() { return "\v"; },
      peg$c88 = "x",
      peg$c89 = peg$literalExpectation("x", false),
      peg$c90 = function(h) { return parseHexChar(h); },
      peg$c91 = "u",
      peg$c92 = peg$literalExpectation("u", false),
      peg$c93 = /^[0-9a-fA-F]/,
      peg$c94 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
      peg$c95 = /^[\S\s]/,
      peg$c96 = peg$classExpectation([], true, false),
      peg$c97 = "\u200D",
      peg$c98 = peg$literalExpectation("\u200D", false),
      peg$c99 = "\u200C",
      peg$c100 = peg$literalExpectation("\u200C", false),
      peg$c101 = "d",
      peg$c102 = peg$literalExpectation("d", false),
      peg$c103 = function() { return new CharSet(false, DIGIT); },
      peg$c104 = "D",
      peg$c105 = peg$literalExpectation("D", false),
      peg$c106 = function() { return new CharSet(true, DIGIT); },
      peg$c107 = "s",
      peg$c108 = peg$literalExpectation("s", false),
      peg$c109 = function() { return new CharSet(false, WHITESPACE); },
      peg$c110 = "S",
      peg$c111 = peg$literalExpectation("S", false),
      peg$c112 = function() { return new CharSet(true, WHITESPACE); },
      peg$c113 = "w",
      peg$c114 = peg$literalExpectation("w", false),
      peg$c115 = function() { return new CharSet(false, WORD); },
      peg$c116 = "W",
      peg$c117 = peg$literalExpectation("W", false),
      peg$c118 = function() { return new CharSet(true, WORD); },
      peg$c119 = "[",
      peg$c120 = peg$literalExpectation("[", false),
      peg$c121 = "]",
      peg$c122 = peg$literalExpectation("]", false),
      peg$c123 = function(negated, ranges) { return new CharClass(!!negated, ranges); },
      peg$c124 = "-",
      peg$c125 = peg$literalExpectation("-", false),
      peg$c126 = function(start, end) { return new CharRange(start, end); },
      peg$c127 = function(atom) { return new CharSet(false, atom); },
      peg$c128 = /^[^\-\]\\]/,
      peg$c129 = peg$classExpectation(["-", "]", "\\"], true, false),
      peg$c130 = "b",
      peg$c131 = peg$literalExpectation("b", false),
      peg$c132 = function() { return "\b"; },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsePattern() {
    var s0;

    s0 = peg$parseDisjunction();

    return s0;
  }

  function peg$parseDisjunction() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseAlternative();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 124) {
        s4 = peg$c0;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseAlternative();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c2(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 124) {
          s4 = peg$c0;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseAlternative();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c2(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAlternative() {
    var s0, s1;

    s0 = [];
    s1 = peg$parseTerm();
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseTerm();
    }

    return s0;
  }

  function peg$parseTerm() {
    var s0, s1, s2;

    s0 = peg$parseAssertion();
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseAtom();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseQuantifier();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseAssertion() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 94) {
      s1 = peg$c5;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c7();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 36) {
        s1 = peg$c8;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c10();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 2) === peg$c11) {
          s1 = peg$c11;
          peg$currPos += 2;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c13();
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.substr(peg$currPos, 2) === peg$c14) {
            s1 = peg$c14;
            peg$currPos += 2;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c15); }
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c16();
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.substr(peg$currPos, 3) === peg$c17) {
              s1 = peg$c17;
              peg$currPos += 3;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c18); }
            }
            if (s1 !== peg$FAILED) {
              s2 = peg$parseDisjunction();
              if (s2 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 41) {
                  s3 = peg$c19;
                  peg$currPos++;
                } else {
                  s3 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c20); }
                }
                if (s3 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c21(s2);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              if (input.substr(peg$currPos, 3) === peg$c22) {
                s1 = peg$c22;
                peg$currPos += 3;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c23); }
              }
              if (s1 !== peg$FAILED) {
                s2 = peg$parseDisjunction();
                if (s2 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 41) {
                    s3 = peg$c19;
                    peg$currPos++;
                  } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c20); }
                  }
                  if (s3 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c24(s2);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseQuantifier() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseQuantifierPrefix();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 63) {
        s2 = peg$c25;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c26); }
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c27(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseQuantifierPrefix() {
    var s0, s1, s2, s3, s4, s5;
